--- a/v4/popup.html
+++ b/v4/popup.html
@@ -113,6 +113,9 @@
             <li>Use "Search Info" to learn about a cookie at <a href="https://cookiesearch.org/" target="_blank">cookiesearch.org</a>.</li>
             <li>Click "Delete" to remove a specific cookie.</li>
             <li>Click "Delete All Cookies" to remove all cookies for this site.</li>
+            <li>Unfortunately, many cookies won't have a search result.</li>
+            <li>Use the domain name as an indicator to whether the cookie can be trusted.</li>
+            <li>eg. If you are on youtube.com, and you see all cookies are from youtube.com, there's a good likelihood that it can be trusted.</li>
         </ul>
     </div>
 
