--- a/v4/popup.html
+++ b/v4/popup.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-    <h2>Cookie Tracker</h2>
+    <h2>Cookie Killer</h2>
 
     <button id="toggleInstructions" class="toggle-btn">Show Instructions</button>
     <div id="instructions" class="hidden">
