--- a/v3/popup.html
+++ b/v3/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cookie Tracker</title>
+    <title>Cookie Killer</title>
     <script src="popup.js" defer></script>
     <style>
         table {
